# tree-sitter-antlr4

./: .gitignore  Cargo.toml  README.md  binding.gyp  go.mod  grammar.js  package.json  pom.xml  test_grammars.ps1  tree-sitter.json
bindings/go/: binding.go  binding_test.go
bindings/java/main/io/github/treesitter/jtreesitter/antlr4/: TreeSitterAntlr4.java
bindings/java/test/: TreeSitterAntlr4Test.java
bindings/node/: binding.cc  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
examples/: Expr.g4  minimal.g4  tiger.g4
queries/antlr4/: folds.scm  highlights.scm  injections.scm
rules/: comments.js  grammarSpec.js  literals.js
src/: grammar.json  node-types.json  parser.c
