[package]
authors      = [ "Krishin Wadhwani <krishin901@gmail.com>" ]
autoexamples = false
categories   = [ "parser-implementations", "parsing", "text-editors" ]
description  = "Tree-sitter parser for the Antlr4 parser generator"
edition      = "2024"
keywords     = [ "incremental", "parsing", "tree-sitter", "antlr4" ]
license      = "MIT"
name         = "tree-sitter-antlr4"
readme       = "README.md"
repository   = "https://github.com/lakitu/tree-sitter-antlr4"
version      = "0.1.0"

build   = "bindings/rust/build.rs"
include = [ "bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json", "/LICENSE" ]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.27.0"
